Fixed misaligned HTML tags

--- a/css/style.css
+++ b/css/style.css
@@ -1321,3 +1321,7 @@ input[type="text"] {
 
 .js .animate-box {
   opacity: 0; }
+
+.portfolio img {
+  max-width: 100%;
+}
